syntax = "proto3";

package cuba.iam.auth;

option go_package = "github.com/cuba-erp/api/iam/auth";

import "google/protobuf/timestamp.proto";

// ============ 认证服务 ============

service AuthService {
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);

  // 用户登出
  rpc Logout(LogoutRequest) returns (LogoutResponse);

  // 刷新令牌
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

  // 验证令牌
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // 修改密码
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);

  // 请求重置密码
  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (RequestPasswordResetResponse);

  // 重置密码
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);

  // 启用 2FA
  rpc Enable2FA(Enable2FARequest) returns (Enable2FAResponse);

  // 禁用 2FA
  rpc Disable2FA(Disable2FARequest) returns (Disable2FAResponse);

  // 验证 2FA
  rpc Verify2FA(Verify2FARequest) returns (Verify2FAResponse);

  // 获取活跃会话
  rpc GetActiveSessions(GetActiveSessionsRequest) returns (GetActiveSessionsResponse);

  // 撤销会话
  rpc RevokeSession(RevokeSessionRequest) returns (RevokeSessionResponse);
}

// ============ 消息定义 ============

// 登录请求
message LoginRequest {
  string username = 1;          // 用户名或邮箱
  string password = 2;          // 密码
  string tenant_id = 3;         // 租户 ID
  string device_info = 4;       // 设备信息
  string ip_address = 5;        // IP 地址
}

// 登录响应
message LoginResponse {
  string access_token = 1;      // 访问令牌
  string refresh_token = 2;     // 刷新令牌
  int64 expires_in = 3;         // 过期时间（秒）
  string token_type = 4;        // 令牌类型
  User user = 5;                // 用户信息
  bool require_2fa = 6;         // 是否需要 2FA
  string session_id = 7;        // 会话 ID（用于 2FA）
}

// 登出请求
message LogoutRequest {
  string access_token = 1;      // 访问令牌
  bool logout_all_devices = 2;  // 是否登出所有设备
}

// 登出响应
message LogoutResponse {
  bool success = 1;
}

// 刷新令牌请求
message RefreshTokenRequest {
  string refresh_token = 1;
}

// 刷新令牌响应
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

// 验证令牌请求
message ValidateTokenRequest {
  string access_token = 1;
}

// 验证令牌响应
message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string tenant_id = 3;
  repeated string permissions = 4;
  google.protobuf.Timestamp expires_at = 5;
}

// 修改密码请求
message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

// 修改密码响应
message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}

// 请求重置密码请求
message RequestPasswordResetRequest {
  string email = 1;
  string tenant_id = 2;
}

// 请求重置密码响应
message RequestPasswordResetResponse {
  bool success = 1;
  string message = 2;
}

// 重置密码请求
message ResetPasswordRequest {
  string email = 1;
  string reset_token = 2;
  string new_password = 3;
}

// 重置密码响应
message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

// 启用 2FA 请求
message Enable2FARequest {
  string user_id = 1;
  string method = 2;  // TOTP, SMS, EMAIL
  string verification_code = 3;  // 验证码（可选，用于确认启用）
}

// 启用 2FA 响应
message Enable2FAResponse {
  string secret = 1;              // TOTP secret（Base32 编码）
  string qr_code_url = 2;         // QR 码 URL
  repeated string backup_codes = 3; // 备份码（仅首次返回）
  bool enabled = 4;               // 是否已启用（需要验证码确认）
}

// 禁用 2FA 请求
message Disable2FARequest {
  string user_id = 1;
  string password = 2;  // 密码验证
}

// 禁用 2FA 响应
message Disable2FAResponse {
  bool success = 1;
  string message = 2;
}

// 验证 2FA 请求
message Verify2FARequest {
  string user_id = 1;
  string code = 2;
  string session_id = 3;
}

// 验证 2FA 响应
message Verify2FAResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;           // 过期时间（秒）
}

// 获取活跃会话请求
message GetActiveSessionsRequest {
  string user_id = 1;
}

// 获取活跃会话响应
message GetActiveSessionsResponse {
  repeated Session sessions = 1;
}

// 撤销会话请求
message RevokeSessionRequest {
  string user_id = 1;
  string session_id = 2;
}

// 撤销会话响应
message RevokeSessionResponse {
  bool success = 1;
}

// ============ 实体定义 ============

// 用户
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string display_name = 4;
  string phone = 5;
  string avatar_url = 6;
  string tenant_id = 7;
  repeated string role_ids = 8;
  string status = 9;
  string language = 10;
  string timezone = 11;
  bool two_factor_enabled = 12;
  google.protobuf.Timestamp last_login_at = 13;
  AuditInfo audit_info = 14;
}

// 会话
message Session {
  string id = 1;
  string user_id = 2;
  string device_info = 3;
  string ip_address = 4;
  string user_agent = 5;
  bool is_current = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp expires_at = 8;
  google.protobuf.Timestamp last_activity_at = 9;
}

// 审计信息
message AuditInfo {
  google.protobuf.Timestamp created_at = 1;
  string created_by = 2;
  google.protobuf.Timestamp updated_at = 3;
  string updated_by = 4;
}
