syntax = "proto3";

package iam.policy.v1;

option go_package = "github.com/erp/api/iam/policy/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// ============ Policy 服务 ============

service PolicyService {
  // ===== 策略管理 =====
  rpc CreatePolicy(CreatePolicyRequest) returns (CreatePolicyResponse);
  rpc UpdatePolicy(UpdatePolicyRequest) returns (UpdatePolicyResponse);
  rpc DeletePolicy(DeletePolicyRequest) returns (DeletePolicyResponse);
  rpc GetPolicy(GetPolicyRequest) returns (GetPolicyResponse);
  rpc ListPolicies(ListPoliciesRequest) returns (ListPoliciesResponse);

  // ===== 策略评估 (ABAC) =====
  // 评估单个请求
  rpc Evaluate(EvaluateRequest) returns (EvaluateResponse);
  // 批量评估
  rpc BatchEvaluate(BatchEvaluateRequest) returns (BatchEvaluateResponse);
}

// ============ 策略消息 ============

message CreatePolicyRequest {
  string tenant_id = 1;
  string name = 2;
  string description = 3;
  Effect effect = 4;
  repeated string subjects = 5;   // 匹配主体 (e.g., "user:123", "role:admin", "group:dev")
  repeated string resources = 6;  // 匹配资源 (e.g., "order:123", "product:*")
  repeated string actions = 7;    // 匹配操作 (e.g., "read", "write", "manage")
  string conditions = 8;          // 条件表达式 (JSON string or specific DSL)
  int32 priority = 9;             // 优先级 (数字越大优先级越高，用于解决冲突)
}

message CreatePolicyResponse {
  Policy policy = 1;
}

message UpdatePolicyRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  Effect effect = 4;
  repeated string subjects = 5;
  repeated string resources = 6;
  repeated string actions = 7;
  string conditions = 8;
  int32 priority = 9;
  bool is_active = 10;
}

message UpdatePolicyResponse {
  Policy policy = 1;
}

message DeletePolicyRequest {
  string id = 1;
}

message DeletePolicyResponse {
  bool success = 1;
}

message GetPolicyRequest {
  string id = 1;
}

message GetPolicyResponse {
  Policy policy = 1;
}

message ListPoliciesRequest {
  string tenant_id = 1;
  string subject = 2;    // 按主体过滤
  string resource = 3;   // 按资源过滤
  int32 page = 4;
  int32 page_size = 5;
}

message ListPoliciesResponse {
  repeated Policy policies = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// ============ 评估消息 ============

message EvaluateRequest {
  string tenant_id = 1;
  string subject = 2;           // 当前主体 (e.g. "user:uuid")
  repeated string roles = 3;    // 主体拥有的角色 (用于快速匹配)
  string resource = 4;          // 请求资源
  string action = 5;            // 请求操作
  google.protobuf.Struct context = 6; // 上下文环境 (e.g. { "ip": "1.2.3.4", "time": "09:00" })
}

message EvaluateResponse {
  bool allowed = 1;
  string denied_reason = 2;     // 如果被拒绝，返回原因 (可选，仅调试模式)
  string matched_policy_id = 3; // 匹配到的策略 ID
}

message BatchEvaluateRequest {
  repeated EvaluateRequest requests = 1;
}

message BatchEvaluateResponse {
  repeated EvaluateResponse responses = 1;
}

// ============ 实体定义 ============

message Policy {
  string id = 1;
  string tenant_id = 2;
  string name = 3;
  string description = 4;
  Effect effect = 5;
  repeated string subjects = 6;
  repeated string resources = 7;
  repeated string actions = 8;
  string conditions = 9;        // JSON 格式的条件
  int32 priority = 10;
  bool is_active = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

enum Effect {
  EFFECT_UNSPECIFIED = 0;
  EFFECT_ALLOW = 1;
  EFFECT_DENY = 2;
}
